--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -471,3 +471,33 @@ skill_dankebaohu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
 skill_tunshidanke: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
 skill_shalianjiao: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_kuaisufeisha: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_boudou: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_douqi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shensu: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_wuzhezhixin: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_qiangxi: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_zhanyigaozhang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_jueying: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_kongyazhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_yingzhidouqi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_shuangpozhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_mieyingzhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_heiyapo: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_heiyalianbozhan: 'https://seer2-resource.yuuinih.com/sound/skill/10921.mp3'
+skill_gongshoujianbei: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_shunxunya: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_shunyingya: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_shengmoshizizhan: 'https://seer2-resource.yuuinih.com/sound/skill/10925.mp3'
+skill_renzhezhixin: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_shenpan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_zhanyigaoang: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_jiguang: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_duankongzhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shanguangboji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_shuangrenzhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_juguangzhan: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_baiyapo: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_baiyalianbozhan: 'https://seer2-resource.yuuinih.com/sound/skill/10935.mp3'
+skill_xulichongji: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp3'
+skill_shanxunya: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_shanguangya: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
