--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -2790,7 +2790,7 @@
   ignoreShield: false
   tags: []
   effect:
-    - effect_skill_raise_spa_20_percent
+    - effect_skill_raise_spa_1_stage_20_percent
 - id: skill_yanzhizhua
   element: Fire
   category: Physical
@@ -4317,7 +4317,7 @@
   tags: []
   effect:
     - effect_skill_raise_atk_20_percent
-    - effect_skill_raise_spa_20_percent
+    - effect_skill_raise_spa_1_stage_20_percent
 - id: skill_dianzhilingyu
   element: Electric
   category: Status
@@ -5717,3 +5717,360 @@
   tags: ['consume_shazhidanke']
   effect:
     - effect_skill_add_priority_1_consume_shazhidanke
+- id: skill_boudou
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 40
+  rage: 0
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spe_1_stage_5_percent
+- id: skill_douqi
+  element: Fighting
+  category: Special
+  target: opponent
+  power: 60
+  rage: 5
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stage_5_percent
+- id: skill_shensu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stages
+- id: skill_wuzhezhixin
+  element: Fighting
+  category: Special
+  target: opponent
+  power: 70
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_wuzhezhixin_1
+- id: skill_qiangxi
+  element: Fighting
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_1_stage_if_wuzhezhixin
+- id: skill_zhanyigaozhang
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stages
+- id: skill_jueying
+  element: Shadow
+  category: Physical
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_jueying
+- id: skill_kongyazhan
+  element: Fighting
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_50_if_foe_wuzhezhixin
+- id: skill_yingzhidouqi
+  element: Shadow
+  category: Special
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_yingzhidouqi
+- id: skill_shuangpozhan
+  element: Fighting
+  category: Physical
+  target: opponent
+  power: 50
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: 2
+  effect:
+    - effect_skill_add_mark_foe_shuangrenzhuiji_if_damage_less_100
+- id: skill_mieyingzhan
+  element: Shadow
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+- id: skill_heiyapo
+  element: Fighting
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_baiya_equal_damage_max_800
+- id: skill_heiyalianbozhan
+  element: Fighting
+  category: Climax
+  target: opponent
+  power: 85
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  multihit: 2
+  effect:
+    - effect_skill_reduce_foe_atk_1_stage_20_percent
+    - effect_skill_reduce_foe_def_1_stage_20_percent
+- id: skill_gongshoujianbei
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 95
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_gongshoujianbei
+- id: skill_shunxunya
+  element: Fighting
+  category: Physical
+  target: opponent
+  power: 55
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+- id: skill_shunyingya
+  element: Shadow
+  category: Physical
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+- id: skill_shengmoshizizhan
+  element: Normal
+  category: Climax
+  target: opponent
+  power: 130
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  multihit: 2
+- id: skill_renzhezhixin
+  element: Fighting
+  category: Special
+  target: opponent
+  power: 70
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_renzhezhixin_1
+- id: skill_shenpan
+  element: Fighting
+  category: Special
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage_if_renzhezhixin
+- id: skill_zhanyigaoang
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stages
+- id: skill_jiguang
+  element: Light
+  category: Physical
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_jiguang
+- id: skill_duankongzhan
+  element: Fighting
+  category: Special
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_power_50_if_foe_renzhezhixin
+- id: skill_shanguangboji
+  element: Light
+  category: Physical
+  target: opponent
+  power: 85
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_shanguangboji
+- id: skill_shuangrenzhan
+  element: Fighting
+  category: Special
+  target: opponent
+  power: 50
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  multihit: 2
+  effect:
+    - effect_skill_add_mark_foe_shuangpozhuiji_if_damage_less_100
+- id: skill_juguangzhan
+  element: Light
+  category: Special
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+- id: skill_baiyapo
+  element: Fighting
+  category: Special
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_heiya_equal_damage_max_800
+- id: skill_baiyalianbozhan
+  element: Fighting
+  category: Climax
+  target: opponent
+  power: 85
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  multihit: 2
+  effect:
+    - effect_skill_raise_spa_1_stage_20_percent
+    - effect_skill_raise_spd_1_stage_20_percent
+- id: skill_xulichongji
+  element: Normal
+  category: Special
+  target: opponent
+  power: 95
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_xulichongji
+- id: skill_shanxunya
+  element: Fighting
+  category: Special
+  target: opponent
+  power: 55
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+- id: skill_shanguangya
+  element: Light
+  category: Special
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
