--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -162,3 +162,15 @@ mark_shazhiwang: 'https://seer2-resource.yuuinih.com/png/markImage/3080.png'
 mark_shanghaizengjia: 'https://seer2-resource.yuuinih.com/png/markImage/3016.png'
 mark_xuli: 'https://seer2-resource.yuuinih.com/png/markImage/3073.png'
 mark_shazhidanke: 'https://seer2-resource.yuuinih.com/png/markImage/3075.png'
+mark_wuzhezhixin: 'https://seer2-resource.yuuinih.com/png/markImage/3155.png'
+mark_jueying: 'https://seer2-resource.yuuinih.com/png/markImage/3156.png'
+mark_jiguang: 'https://seer2-resource.yuuinih.com/png/markImage/3157.png'
+mark_yingzhidouqi: 'https://seer2-resource.yuuinih.com/png/markImage/3158.png'
+mark_shuangrenzhuiji: 'https://seer2-resource.yuuinih.com/png/markImage/3158.png'
+mark_baiya: 'https://seer2-resource.yuuinih.com/png/markImage/3159.png'
+mark_heiya: 'https://seer2-resource.yuuinih.com/png/markImage/3160.png'
+mark_gongshoujianbei: 'https://seer2-resource.yuuinih.com/png/markImage/3161.png'
+mark_renzhezhixin: 'https://seer2-resource.yuuinih.com/png/markImage/3162.png'
+mark_shanguangboji: 'https://seer2-resource.yuuinih.com/png/markImage/3157.png'
+mark_shuangpozhuiji: 'https://seer2-resource.yuuinih.com/png/markImage/3158.png'
+mark_xulichongji: 'https://seer2-resource.yuuinih.com/png/markImage/3161.png'
