--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "storybook": "pnpm --filter @arcadia-eternity/web-ui run storybook",
     "test": "run-s test:types test:units test:integration",
     "test:types": "tsc --noEmit",
-    "test:units": "jest"
+    "test:units": "tsx japa.ts"
   },
   "dependencies": {
     "@arcadia-eternity/battle": "workspace:^",
@@ -54,6 +54,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@japa/assert": "^4.0.1",
+    "@japa/expect": "^3.0.4",
+    "@japa/file-system": "^2.3.2",
+    "@japa/runner": "^4.2.0",
+    "@japa/snapshot": "^2.0.8",
+    "@japa/spec-reporter": "^1.3.3",
     "@pinia/testing": "^1.0.2",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
@@ -61,14 +67,12 @@
     "@swc/core": "^1.12.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/jest": "^29.5.14",
     "@types/node": "^24.0.1",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "bun-types": "^1.2.16",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-vue": "^10.2.0",
-    "jest": "^30.0.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.5.3",
     "quicktype": "^23.2.6",
@@ -76,7 +80,6 @@
     "rollup": "^4.43.0",
     "rollup-plugin-node-externals": "^8.0.0",
     "rollup-plugin-swc3": "^0.12.1",
-    "ts-jest": "^29.4.0",
     "tslib": "^2.8.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
