--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -174,3 +174,5 @@ mark_renzhezhixin: 'https://seer2-resource.yuuinih.com/png/markImage/3162.png'
 mark_shanguangboji: 'https://seer2-resource.yuuinih.com/png/markImage/11415.png'
 mark_shuangpozhuiji: 'https://seer2-resource.yuuinih.com/png/markImage/3158.png'
 mark_xulichongji: 'https://seer2-resource.yuuinih.com/png/markImage/3161.png'
+mark_fenshen: 'https://seer2-resource.yuuinih.com/png/markImage/3184.png'
+mark_fenshenhying: 'https://seer2-resource.yuuinih.com/png/markImage/3185.png'
